force-app/main/default/objects/FIN_Jurisdiction_Tax_Rates__c/FIN_Jurisdiction_Tax_Rates__c.object-meta.xml
<CustomObject>
    <label>Jurisdiction Tax Rates</label>
    <nameField>
        <label>Jurisdiction Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdiction Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>