force-app/main/default/objects/FIN_Jurisdiction_Tax_Rates__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Wyoming</fullName>
            </value>
            <value>
                <fullName>Utah</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Virginia</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>Vermont</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Tennessee</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>South Carolina</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>