force-app/main/default/objects/FIN_Jurisdiction_Tax_Rates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Abbreviation__c</columns>
    <columns>Tax_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>